# NLP-100

./: README.rst  pyproject.toml
nlp/: NLP100_2020rev1.ipynb
nlp.egg-info/: PKG-INFO  SOURCES.txt
nlp/.ipynb_checkpoints/: NLP100_2020rev1-checkpoint.ipynb
tests/: test_nlp.py
