[tool.poetry]
name = "NLP"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
jupyter = "^1.0"
mecab-python3 = "^1.0"
matplotlib = "^3.3"
seaborn = "^0.10"

[build-system]
requires = ["poetry>=0.12", "pip>=20.1.1"]
build-backend = "poetry.masonry.api"
